--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>AMORA</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <h1>Você precisa habilitar o Javascript para ver esta página</h1>
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
